syntax = "proto2";

package Models;

option java_package = "com.google.errorprone.bugpatterns.refactoringexperiment.models";

message RefactorInfo {
    optional string name = 1;
    optional string type = 2;
    optional string owner = 3;
    optional string kind = 4;
    optional string refactor_to = 5;
}