package com.google.errorprone.bugpatterns.refactoringexperiment.analysis;


import com.google.errorprone.bugpatterns.refactoringexperiment.models.AssignmentOuterClass.Assignment;
import com.google.errorprone.bugpatterns.refactoringexperiment.models.ClassDeclarationOuterClass.ClassDeclaration;
import com.google.errorprone.bugpatterns.refactoringexperiment.models.MethodDeclarationOuterClass.MethodDeclaration;
import com.google.errorprone.bugpatterns.refactoringexperiment.models.MethodInvocationOuterClass.MethodInvocation;
import com.google.errorprone.bugpatterns.refactoringexperiment.models.RefactorableOuterClass.Refactorable;
import com.google.errorprone.bugpatterns.refactoringexperiment.models.VariableOuterClass.Variable;

import java.util.List;

/**
 * Created by ameya on 1/28/18.
 */
public class QueryProtoBuffData {


    public static List<MethodInvocation> getAllMethdInvc(String folderName){

        return null;
    }


    public static List<MethodInvocation> getAllNewClass(String folderName) {

        return null;
    }

    public static List<Assignment> getAllAsgn(String folderName) {

        return null;
    }

    public static List<MethodDeclaration> getAllMethdDecl(String folderName) {

        return null;

    }

    public static List<Variable> getAllVrbl(String folderName)  {

        return null;
    }

    public static List<ClassDeclaration> getAllClassDecl(String folderName) {
        return null;
    }

    public static List<ClassDeclaration> getAllInterfaceDecl(String folderName) {
        return null;
    }
    public static List<Refactorable> getAllRefactorInfo(String folderName)  {
        return null;
    }
}
